[package]
name = "client"
version = "0.1.0"
authors = ["Zhibin He <hez@vmware.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
