[package]
name = "client"
version = "0.1.0"
authors = ["Zhibin He <hez@vmware.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
env_logger = "0.9"
lazy_static = "1.4.0"
log = "0.4.16"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
